src/substrait/gen/antlr/SubstraitTypeParser.py
# Generated from SubstraitType.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SubstraitTypeParser ( Parser ):

    grammarFileName = "SubstraitType.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':='", "'='", 
                     "'!='", "'>='", "'<='", "'>'", "'<'", "'!'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'['", "']'", "'('", "')'", 
                     "';'", "','", "'?'", "':'", "'''" ]

    symbolicNames = [ "<INVALID>", "If", "Then", "Else", "Boolean", "I8", 
                      "I16", "I32", "I64", "FP32", "FP64", "String", "Binary", 
                      "Timestamp", "TimestampTZ", "Date", "Time", "IntervalYear", 
                      "IntervalDay", "IntervalCompound", "UUID", "Decimal", 
                      "PrecisionTimestamp", "PrecisionTimestampTZ", "FixedChar", 
                      "VarChar", "FixedBinary", "Struct", "NStruct", "List", 
                      "Map", "ANY", "UserDefined", "And", "Or", "Assign", 
                      "Eq", "NotEquals", "Gte", "Lte", "Gt", "Lt", "Bang", 
                      "Plus", "Minus", "Asterisk", "ForwardSlash", "Percent", 
                      "OBracket", "CBracket", "OParen", "CParen", "SColon", 
                      "Comma", "QMark", "Colon", "SingleQuote", "Number", 
                      "Identifier", "LineComment", "BlockComment", "Whitespace", 
                      "Newline" ]

    RULE_start = 0
    RULE_scalarType = 1
    RULE_parameterizedType = 2
    RULE_numericParameter = 3
    RULE_anyType = 4
    RULE_type = 5
    RULE_expr = 6

    ruleNames =  [ "start", "scalarType", "parameterizedType", "numericParameter", 
                   "anyType", "type", "expr" ]

    EOF = Token.EOF
    If=1
    Then=2
    Else=3
    Boolean=4
    I8=5
    I16=6
    I32=7
    I64=8
    FP32=9
    FP64=10
    String=11
    Binary=12
    Timestamp=13
    TimestampTZ=14
    Date=15
    Time=16
    IntervalYear=17
    IntervalDay=18
    IntervalCompound=19
    UUID=20
    Decimal=21
    PrecisionTimestamp=22
    PrecisionTimestampTZ=23
    FixedChar=24
    VarChar=25
    FixedBinary=26
    Struct=27
    NStruct=28
    List=29
    Map=30
    ANY=31
    UserDefined=32
    And=33
    Or=34
    Assign=35
    Eq=36
    NotEquals=37
    Gte=38
    Lte=39
    Gt=40
    Lt=41
    Bang=42
    Plus=43
    Minus=44
    Asterisk=45
    ForwardSlash=46
    Percent=47
    OBracket=48
    CBracket=49
    OParen=50
    CParen=51
    SColon=52
    Comma=53
    QMark=54
    Colon=55
    SingleQuote=56
    Number=57
    Identifier=58
    LineComment=59
    BlockComment=60
    Whitespace=61
    Newline=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SubstraitTypeParser.ExprContext,0)


        def EOF(self):
            return self.getToken(SubstraitTypeParser.EOF, 0)

        def getRuleIndex(self):
            return SubstraitTypeParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = SubstraitTypeParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.expr(0)
            self.state = 15
            self.match(SubstraitTypeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScalarTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SubstraitTypeParser.RULE_scalarType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DateContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Date(self):
            return self.getToken(SubstraitTypeParser.Date, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDate" ):
                listener.enterDate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDate" ):
                listener.exitDate(self)


    class StringContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(SubstraitTypeParser.String, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)


    class I64Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def I64(self):
            return self.getToken(SubstraitTypeParser.I64, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterI64" ):
                listener.enterI64(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitI64" ):
                listener.exitI64(self)


    class UserDefinedContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def UserDefined(self):
            return self.getToken(SubstraitTypeParser.UserDefined, 0)
        def Identifier(self):
            return self.getToken(SubstraitTypeParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUserDefined" ):
                listener.enterUserDefined(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUserDefined" ):
                listener.exitUserDefined(self)


    class I32Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def I32(self):
            return self.getToken(SubstraitTypeParser.I32, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterI32" ):
                listener.enterI32(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitI32" ):
                listener.exitI32(self)


    class IntervalYearContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IntervalYear(self):
            return self.getToken(SubstraitTypeParser.IntervalYear, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntervalYear" ):
                listener.enterIntervalYear(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntervalYear" ):
                listener.exitIntervalYear(self)


    class UuidContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def UUID(self):
            return self.getToken(SubstraitTypeParser.UUID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUuid" ):
                listener.enterUuid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUuid" ):
                listener.exitUuid(self)


    class I8Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def I8(self):
            return self.getToken(SubstraitTypeParser.I8, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterI8" ):
                listener.enterI8(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitI8" ):
                listener.exitI8(self)


    class I16Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def I16(self):
            return self.getToken(SubstraitTypeParser.I16, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterI16" ):
                listener.enterI16(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitI16" ):
                listener.exitI16(self)


    class BinaryContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Binary(self):
            return self.getToken(SubstraitTypeParser.Binary, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary" ):
                listener.enterBinary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary" ):
                listener.exitBinary(self)


    class Fp64Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FP64(self):
            return self.getToken(SubstraitTypeParser.FP64, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFp64" ):
                listener.enterFp64(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFp64" ):
                listener.exitFp64(self)


    class Fp32Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FP32(self):
            return self.getToken(SubstraitTypeParser.FP32, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFp32" ):
                listener.enterFp32(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFp32" ):
                listener.exitFp32(self)


    class TimeContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Time(self):
            return self.getToken(SubstraitTypeParser.Time, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTime" ):
                listener.enterTime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTime" ):
                listener.exitTime(self)


    class BooleanContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Boolean(self):
            return self.getToken(SubstraitTypeParser.Boolean, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean" ):
                listener.enterBoolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean" ):
                listener.exitBoolean(self)


    class TimestampContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Timestamp(self):
            return self.getToken(SubstraitTypeParser.Timestamp, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimestamp" ):
                listener.enterTimestamp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimestamp" ):
                listener.exitTimestamp(self)


    class TimestampTzContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TimestampTZ(self):
            return self.getToken(SubstraitTypeParser.TimestampTZ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimestampTz" ):
                listener.enterTimestampTz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimestampTz" ):
                listener.exitTimestampTz(self)



    def scalarType(self):

        localctx = SubstraitTypeParser.ScalarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_scalarType)
        try:
            self.state = 34
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                localctx = SubstraitTypeParser.BooleanContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 17
                self.match(SubstraitTypeParser.Boolean)
                pass
            elif token in [5]:
                localctx = SubstraitTypeParser.I8Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 18
                self.match(SubstraitTypeParser.I8)
                pass
            elif token in [6]:
                localctx = SubstraitTypeParser.I16Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 19
                self.match(SubstraitTypeParser.I16)
                pass
            elif token in [7]:
                localctx = SubstraitTypeParser.I32Context(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 20
                self.match(SubstraitTypeParser.I32)
                pass
            elif token in [8]:
                localctx = SubstraitTypeParser.I64Context(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 21
                self.match(SubstraitTypeParser.I64)
                pass
            elif token in [9]:
                localctx = SubstraitTypeParser.Fp32Context(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 22
                self.match(SubstraitTypeParser.FP32)
                pass
            elif token in [10]:
                localctx = SubstraitTypeParser.Fp64Context(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 23
                self.match(SubstraitTypeParser.FP64)
                pass
            elif token in [11]:
                localctx = SubstraitTypeParser.StringContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 24
                self.match(SubstraitTypeParser.String)
                pass
            elif token in [12]:
                localctx = SubstraitTypeParser.BinaryContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 25
                self.match(SubstraitTypeParser.Binary)
                pass
            elif token in [13]:
                localctx = SubstraitTypeParser.TimestampContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 26
                self.match(SubstraitTypeParser.Timestamp)
                pass
            elif token in [14]:
                localctx = SubstraitTypeParser.TimestampTzContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 27
                self.match(SubstraitTypeParser.TimestampTZ)
                pass
            elif token in [15]:
                localctx = SubstraitTypeParser.DateContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 28
                self.match(SubstraitTypeParser.Date)
                pass
            elif token in [16]:
                localctx = SubstraitTypeParser.TimeContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 29
                self.match(SubstraitTypeParser.Time)
                pass
            elif token in [17]:
                localctx = SubstraitTypeParser.IntervalYearContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 30
                self.match(SubstraitTypeParser.IntervalYear)
                pass
            elif token in [20]:
                localctx = SubstraitTypeParser.UuidContext(self, localctx)
                self.enterOuterAlt(localctx, 15)
                self.state = 31
                self.match(SubstraitTypeParser.UUID)
                pass
            elif token in [32]:
                localctx = SubstraitTypeParser.UserDefinedContext(self, localctx)
                self.enterOuterAlt(localctx, 16)
                self.state = 32
                self.match(SubstraitTypeParser.UserDefined)
                self.state = 33
                self.match(SubstraitTypeParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterizedTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SubstraitTypeParser.RULE_parameterizedType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StructContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.copyFrom(ctx)

        def Struct(self):
            return self.getToken(SubstraitTypeParser.Struct, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SubstraitTypeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SubstraitTypeParser.ExprContext,i)

        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(SubstraitTypeParser.Comma)
            else:
                return self.getToken(SubstraitTypeParser.Comma, i)
        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct" ):
                listener.enterStruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct" ):
                listener.exitStruct(self)


    class PrecisionTimestampTZContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.precision = None # NumericParameterContext
            self.copyFrom(ctx)

        def PrecisionTimestampTZ(self):
            return self.getToken(SubstraitTypeParser.PrecisionTimestampTZ, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def numericParameter(self):
            return self.getTypedRuleContext(SubstraitTypeParser.NumericParameterContext,0)

        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrecisionTimestampTZ" ):
                listener.enterPrecisionTimestampTZ(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrecisionTimestampTZ" ):
                listener.exitPrecisionTimestampTZ(self)


    class NStructContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.copyFrom(ctx)

        def NStruct(self):
            return self.getToken(SubstraitTypeParser.NStruct, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(SubstraitTypeParser.Identifier)
            else:
                return self.getToken(SubstraitTypeParser.Identifier, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SubstraitTypeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SubstraitTypeParser.ExprContext,i)

        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(SubstraitTypeParser.Comma)
            else:
                return self.getToken(SubstraitTypeParser.Comma, i)
        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNStruct" ):
                listener.enterNStruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNStruct" ):
                listener.exitNStruct(self)


    class VarCharContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.len_ = None # NumericParameterContext
            self.copyFrom(ctx)

        def VarChar(self):
            return self.getToken(SubstraitTypeParser.VarChar, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def numericParameter(self):
            return self.getTypedRuleContext(SubstraitTypeParser.NumericParameterContext,0)

        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarChar" ):
                listener.enterVarChar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarChar" ):
                listener.exitVarChar(self)


    class FixedBinaryContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.len_ = None # NumericParameterContext
            self.copyFrom(ctx)

        def FixedBinary(self):
            return self.getToken(SubstraitTypeParser.FixedBinary, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def numericParameter(self):
            return self.getTypedRuleContext(SubstraitTypeParser.NumericParameterContext,0)

        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFixedBinary" ):
                listener.enterFixedBinary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFixedBinary" ):
                listener.exitFixedBinary(self)


    class IntervalCompoundContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.precision = None # NumericParameterContext
            self.copyFrom(ctx)

        def IntervalCompound(self):
            return self.getToken(SubstraitTypeParser.IntervalCompound, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def numericParameter(self):
            return self.getTypedRuleContext(SubstraitTypeParser.NumericParameterContext,0)

        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntervalCompound" ):
                listener.enterIntervalCompound(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntervalCompound" ):
                listener.exitIntervalCompound(self)


    class IntervalDayContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.precision = None # NumericParameterContext
            self.copyFrom(ctx)

        def IntervalDay(self):
            return self.getToken(SubstraitTypeParser.IntervalDay, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def numericParameter(self):
            return self.getTypedRuleContext(SubstraitTypeParser.NumericParameterContext,0)

        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntervalDay" ):
                listener.enterIntervalDay(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntervalDay" ):
                listener.exitIntervalDay(self)


    class PrecisionTimestampContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.precision = None # NumericParameterContext
            self.copyFrom(ctx)

        def PrecisionTimestamp(self):
            return self.getToken(SubstraitTypeParser.PrecisionTimestamp, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def numericParameter(self):
            return self.getTypedRuleContext(SubstraitTypeParser.NumericParameterContext,0)

        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrecisionTimestamp" ):
                listener.enterPrecisionTimestamp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrecisionTimestamp" ):
                listener.exitPrecisionTimestamp(self)


    class FixedCharContext(ParameterizedTypeContext):
